<resources>
    <string name="app_name">置家网</string>
    <string name="mail_size">99+</string>
    <string name="index_top_app_gps">置家网</string>
    <string name="search_house_hint">请输入楼盘名称(中文/拼音/简拼)、地址</string>
    <string name="search_city_hint">请输入城市名称</string>
    <string name="new_house_title">新房 - %1$s</string>
    <string name="old_house_title">二手房 - %1$s</string>
    <string name="rent_house_title">租房 - %1$s</string>
    <string name="communtiy_title">小区 - %1$s</string>
    <string name="select_city">选择城市/切换城市</string>
    <string name="gps_city">定位城市</string>
    <string name="gpsing">定位中...</string>
    <string name="hot_city">热门城市</string>
    <string name="all_city">全部城市</string>
    <string name="news">置家资讯 - %1$s</string>
    <string name="news_detail_title">%1$s - %2$s</string>
    <string name="related_news">相关资讯</string>
    <string name="city_shijiazhuang">石家庄</string>
    <string name="city_baoding">保定</string>
    <string name="city_handan">邯郸</string>
    <string name="more">更多</string>
    <string name="check_update">检查更新</string>
    <string name="no_update">已经是最新版</string>
    <string name="has_update">发现软件版本更新</string>
    <string name="about_us">关于我们</string>
    <string name="about_us_detail">        置家网是河北置家网络技术有限公司自2010年起全新打造的以房产家居类置业消费为核心的专业化、生活化网站，置家网延续了常规房产家居类网站的信息承载和传播功能，并在此基础上发展衍化成为集合线上传播、线下营销、线上线下联动等于一体、紧贴国际互联网发展步伐的全新O2O模式网站，并向特色化、纵深化、链条化方向更深入发展，形成规模最大、最具竞争力的专业房产家居类网站。</string>
    <string name="feedback">意见反馈</string>
    <string name="clear_cache">清除缓存</string>
    <string name="clear_cache_finish">缓存清理完毕</string>
    <string name="disclaimer">免责声明</string>
    <string name="catchword">置家找房 马上有戏</string>
    <string name="hot_line">客服热线: 0311-66683355</string>
    <string name="sina_weibo">新浪微博: zhijia2007@163.com</string>
    <string name="web_site">网站地址: http://www.zhijia.com</string>
    <string name="weixin">微 信 号: sjzzhijia</string>
    <string name="area">区域</string>
    <string name="rental">租金</string>
    <string name="day_rental">日租金</string>
    <string name="price">单价</string>
    <string name="total_price">总价</string>
    <string name="proportion">面积</string>
    <string name="recommend_trade">推荐行业</string>
    <string name="room_type">户型</string>
    <string name="source">来源</string>
    <string name="rent_method">租赁方式</string>
    <string name="type">类型</string>
    <string name="category">类别</string>
    <string name="level">级别</string>
    <string name="feature">特色</string>
    <string name="decoration">装修情况</string>
    <string name="floor">楼层</string>
    <string name="open_time">开盘时间</string>
    <string name="sort">排序</string>
    <string name="list">列表</string>
    <string name="map">地图</string>
    <string name="calculator">计算器</string>
    <string name="compute">计算</string>
    <string name="compute_result">计算结果</string>
    <string name="information">资讯</string>
    <string name="prompt">提示</string>
    <string name="confirm_dial">确认拨打</string>
    <string name="select_one_city">请选择一个城市。</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="exit_app">确定要退出置家网？</string>
    <string name="my_message">我的消息</string>
    <string name="all_message_desc">共有%1$s个消息，%2$s个未读消息。</string>
    <string name="write_message">写消息</string>
    <string name="short_message">短消息</string>
    <string name="system_notification">系统通知</string>
    <string name="message_receiver_hint">请输入收件人用户名</string>
    <string name="message_body_hint">赶紧留话吧！（2-300个文字）</string>
    <string name="less_than_message_min_length">消息长度至少为2个字！</string>
    <string name="send">发送</string>
    <string name="message_sent">消息已发送！</string>
    <string name="delete">删除</string>
    <string name="message_notification">置家提醒</string>
    <string name="with">与</string>
    <string name="conversation_history">的对话记录</string>
    <string name="feedback_desc">欢迎您对置家网提出意见和建议，您的每个建议都将是我们改进的空间。</string>
    <string name="feedback_message_hint">请输入您的宝贵建议！（500字内）</string>
    <string name="input_cellphone_hint">请输入您的手机号</string>
    <string name="submit">提交</string>
    <string name="feedback_submit_success">信息已提交，感谢您的反馈！</string>
    <string name="reset">重置</string>
    <string name="calculator_loan">贷款计算器</string>
    <string name="calculator_capacity">购房能力评估</string>
    <string name="calculator_group">组合型</string>
    <string name="calculator_funds">公积金</string>
    <string name="calculator_funds_loan">公积金贷款计算器</string>
    <string name="calculator_business_loan">商业贷款</string>
    <string name="calculator_before_loan">提前还款计算器</string>
    <string name="calculator_tax">税费计算器</string>
    <string name="register">注册</string>
    <string name="login">登陆</string>
    <string name="login_success">登陆成功！</string>
    <string name="confirm_logout">确认注销？</string>
    <string name="logout_success">注销成功！</string>
    <string name="login_name_hint">请输入用户名/手机号/邮箱</string>
    <string name="input_password_hint">请输入密码</string>
    <string name="forget_password">忘记密码？</string>
    <string name="use_partner_loginid">使用合作帐号登陆</string>
    <string name="register_step_one">1.输入手机号及验证码</string>
    <string name="register_step_two">2.设置用户名及密码</string>
    <string name="input_message_authentication_code_hint">请输入短信验证码</string>
    <string name="send_message_authentication_code">发送验证码</string>
    <string name="send_message_authentication_code_is_send">验证码已发送</string>
    <string name="save_and_next">提交并进行下一步</string>
    <string name="create_login_id_hint">请填写用户名</string>
    <string name="create_password_hint">请设置密码（6-16位字符字母数字）</string>
    <string name="create_password_again_hint">请再次输入密码</string>
    <string name="password_not_equal">两次输入的密码不一致</string>
    <string name="complete_register">完成注册</string>
    <string name="register_success">注册成功！</string>
    <string name="find_password">找回密码</string>
    <string name="change_password">重置密码</string>
    <string name="find_password_step_one">1.验证手机号</string>
    <string name="find_password_step_two">2.重置密码</string>
    <string name="set_new_password">请设置新登陆密码</string>
    <string name="set_new_password_again">请重复输入新密码</string>
    <string name="change_password_success">重置密码成功！</string>
    <string name="search_new_house">搜索 - 新房</string>
    <string name="search_old_house">搜索 - 二手房</string>
    <string name="search_rent_house">搜索 - 租房</string>
    <string name="search_information">搜索 - 资讯</string>
    <string name="new_house">新房</string>
    <string name="old_house">二手房</string>
    <string name="rent_house">租房</string>
    <string name="search_hint">请输入搜索关键字</string>
    <string name="search">搜索</string>
    <string name="search_history">搜索历史</string>
    <string name="all">全部</string>
    <string name="residence">住宅</string>
    <string name="office">写字楼</string>
    <string name="shop">商铺</string>
    <string name="house_privilege">电商特惠 - %1$s</string>
    <string name="hot_house">热点楼盘 - %1$s</string>
    <string name="recent_open_house">近期开盘 - %1$s</string>
    <string name="privilege_total_count_desc">共有%1$s个特惠楼盘</string>
    <string name="hot_house_total_count_desc">共有%1$s个热点楼盘</string>
    <string name="recent_open_house_total_count_desc">共有%1$s个楼盘近期开盘</string>
    <string name="back">返回</string>
    <string name="zhijia_gain">置家赚</string>
    <string name="look_house_group">看房团</string>
    <string name="get_privilege">获取优惠</string>
    <string name="zhijia_privilege">置家特惠：</string>
    <string name="privilege_time_range">特惠时间：</string>
    <string name="privilege_choose">优惠选择：</string>
    <string name="buy_privilege_count">购买套数：</string>
    <string name="input_name_hint">请输入姓名 *</string>
    <string name="earn_commission">赚佣金</string>
    <string name="howto_earn_commission">如何赚佣金</string>
    <string name="start_earn_commission">开始赚佣金</string>
    <string name="recommended_buy_house">推荐买房</string>
    <string name="recommended_process">推荐流程</string>
    <string name="recommended_process_detail">"<font color="#E94820">注册置家网会员</font><br />30秒完成会员注册，轻松简单。<br /><br /><font color="#E94820">推荐购房人</font><br />填写推荐信息，即可全程跟踪被推荐人购房进度。<br /><br /><font color="#E94820">赚取佣金</font><br />被推荐人通过网站成功购房，推荐人即可获得佣金。"</string>
    <string name="recommended_rules">推荐规则</string>
    <string name="recommended_rules_detail">"
        1.网站将对会员信息严格保密，未经会员允许不向任何第三方泄露会员信息。<br /><br />        2.会员的每个推荐信息有效周期为3个月，有效期内被推荐人未通过网站优惠购房的，推荐信息作废；被推荐人确有购房需求的，会员可再次推荐。<br /><br />        3.已在开发商处办理任一有关房产买卖手续（如办理VIP卡、交纳定金或签订认购书等）的推荐信息，为无效推荐信息。<br /><br />        4.经网站认定为恶意推荐的，网站将关闭该会员推荐功能。<br /></string>
    <string name="input_friend_name_hint">请输入朋友姓名 *</string>
    <string name="input_friend_cellphone_hint">请输入联系电话 *</string>
    <string name="price_range_hint">价格范围 *</string>
    <string name="intention_area_hint">意向区域 *</string>
    <string name="input_intention_house_hint">请输入意向楼盘</string>
    <string name="input_intention_description_hint">请输入说明（100字内）</string>
    <string name="immediately_recommended">立即推荐</string>
    <string name="please_select_with_right">请选择 ></string>
    <string name="please_select">请选择</string>
    <string name="loading_content">正在加载中</string>
    <string name="search_community_hint">请输入小区名称（中文/拼音/简拼）</string>
    <string name="attention">关注</string>
    <string name="cancel_attention">取消关注</string>
    <string name="condo_tour_list">看房团列表</string>
    <string name="condo_tour_must_know">看房须知</string>
    <string name="click_to_apply">点击报名</string>
    <string name="message_authentication">短信验证</string>
    <string name="call_notify">电话通知</string>
    <string name="i_know">知道了</string>
    <string name="condo_tour_process_desc">收到您的报名信息后，我们的工作人员会与您电话联系，并通知看房团的集合地点和时间。</string>
    <string name="condo_tour_list_no_data">哎呀！\n新一期的看房团正在准备中，赶紧填写感兴趣的楼盘，进行预约吧！</string>
    <string name="male">男</string>
    <string name="female">女</string>
    <string name="remark">备注</string>
    <string name="input_intention_house_with_star_hint">请输入意向楼盘 *</string>
    <string name="immediately_apply">马上报名</string>
    <string name="telephone_counseling">电话咨询</string>
    <string name="condo_tour_privilege_desc">最高优惠：</string>
    <string name="condo_tour_price_desc">楼盘均价：</string>
    <string name="condo_tour_recommend">编辑推荐：</string>
    <string name="condo_tour_area">所在位置：</string>
    <string name="condo_tour_apply_count_desc">已 报 名：</string>
    <string name="condo_tour_apply">看房团报名</string>
    <string name="zhijia_look_house_group">置家看房团</string>
    <string name="condo_tour_feature">线路特点：</string>
    <string name="condo_tour_activity_description">活动说明</string>
    <string name="condo_tour_map">楼盘地图</string>
    <string name="houses_introduction">楼盘介绍</string>
    <string name="house_type_selection">户型筛选</string>
    <string name="my_zhijia">我的置家</string>
    <string name="my_commission">我的佣金</string>
    <string name="my_new_house">我的新房</string>
    <string name="my_old_house">我的二手房</string>
    <string name="my_rent_house">我的租房</string>
    <string name="my_attention_new_house">我关注的新房</string>
    <string name="my_attention_community">我关注的小区</string>
    <string name="my_browse_new_house">我浏览的新房</string>
    <string name="authentication_mobile">认证手机</string>
    <string name="my_order_watch_old_house_record">我的预约看房记录</string>
    <string name="my_favorites_old_house">我收藏的二手房</string>
    <string name="my_browse_old_house">我浏览的二手房</string>
    <string name="my_browse_community">我浏览的小区</string>
    <string name="my_order_watch_rent_house_record">我的预约看房记录</string>
    <string name="my_favorites_rent_house">我收藏的租房</string>
    <string name="my_browse_rent_house">我浏览的租房</string>
    <string name="mobile_authentication">手机认证</string>
    <string name="mobile_authentication_success">手机认证成功！</string>
    <string name="email_authentication">邮箱认证</string>
    <string name="certification">实名认证</string>
    <string name="input_real_name_hint">请输入真实姓名</string>
    <string name="input_identity_card_hint">请输入身份证号码</string>
    <string name="click_to_upload">点击上传</string>
</resources>