<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/common_bg">
    <!--头部-->
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/head_bg">

        <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                android:layout_alignParentLeft="true"
                android:layout_alignWithParentIfMissing="true"
                android:layout_centerVertical="true"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/find_password"
                android:layout_centerInParent="true"/>
    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:text="@string/find_password_step_one"
                android:textSize="16sp"
                android:textColor="@color/default_font"/>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:src="@drawable/calculator_right"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="left|center_vertical"
                android:textSize="16sp"
                android:textColor="@color/high_light_font"
                android:text="@string/find_password_step_two"/>
    </LinearLayout>

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/split_line"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/input">

            <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:inputType="textPassword"
                    android:textSize="16sp"
                    android:background="@drawable/input_underline"
                    android:hint="@string/set_new_password"/>

            <EditText
                    android:id="@+id/password_again"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:inputType="textPassword"
                    android:textSize="16sp"
                    android:background="@drawable/input_underline"
                    android:hint="@string/set_new_password_again"/>
        </LinearLayout>

        <Button
                android:id="@+id/complete_change_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/change_password"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:background="@drawable/red_long_button"/>
    </LinearLayout>
</LinearLayout>