<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/common_bg">
    <!--头部-->
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/head_bg">

        <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                android:layout_alignParentLeft="true"
                android:layout_alignWithParentIfMissing="true"
                android:layout_centerVertical="true"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/register"
                android:layout_centerInParent="true"/>
    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:orientation="horizontal">

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|center_vertical"
                android:layout_gravity="center_vertical"
                android:text="@string/register_step_one"
                android:textSize="14sp"
                android:textColor="@color/high_light_font"/>

        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="5dp"
                android:src="@drawable/calculator_right"/>

        <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center_vertical"
                android:gravity="left|center_vertical"
                android:textColor="@color/default_font"
                android:textSize="14sp"
                android:text="@string/register_step_two"/>
    </LinearLayout>

    <ImageView
            android:layout_width="match_parent"
            android:layout_height="2px"
            android:background="@color/split_line"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/input">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                <EditText
                        android:id="@+id/cellphone"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="10dp"
                        android:inputType="phone"
                        android:textSize="16sp"
                        android:background="@drawable/input_underline"
                        android:hint="@string/input_cellphone_hint"/>

                <Button
                        android:id="@+id/get_mobile_code"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/white"
                        android:layout_gravity="center_vertical"
                        android:layout_marginRight="10dp"
                        android:padding="5dp"
                        android:text="@string/send_message_authentication_code"
                        android:background="@drawable/common_bule_button"/>
            </LinearLayout>

            <EditText
                    android:id="@+id/message_authentication_code"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:inputType="text"
                    android:textSize="16sp"
                    android:background="@drawable/input_underline"
                    android:hint="@string/input_message_authentication_code_hint"/>
        </LinearLayout>

        <Button
                android:id="@+id/next"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/save_and_next"
                android:textSize="16sp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/white"
                android:background="@drawable/common_red_long_button"/>
    </LinearLayout>
</LinearLayout>