<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/common_bg">
    <!--头部-->
    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/head_bg">

        <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                android:layout_alignParentLeft="true"
                android:layout_alignWithParentIfMissing="true"
                android:layout_centerVertical="true"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/condo_tour_must_know"
                android:layout_centerInParent="true"/>
    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginRight="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/input">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center|center_vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="horizontal">

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/click_to_apply"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:gravity="center|center_vertical"
                    android:background="@drawable/roundness_blue"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="2dp"
                    android:background="@drawable/arrow_short"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/message_authentication"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:gravity="center|center_vertical"
                    android:background="@drawable/roundness_green"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_margin="2dp"
                    android:background="@drawable/arrow_short"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/call_notify"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:gravity="center|center_vertical"
                    android:background="@drawable/roundness_red"/>
        </LinearLayout>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="15dp"
                android:textSize="16sp"
                android:textColor="@color/black"
                android:text="@string/condo_tour_process_desc"/>

        <ImageView
                android:id="@+id/split_line"
                android:layout_width="match_parent"
                android:layout_height="2px"
                android:layout_gravity="center_vertical"
                android:background="@color/split_line"/>

        <TextView
                android:id="@+id/i_know"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_vertical"
                android:padding="10dp"
                android:textColor="@color/high_light_font"
                android:textSize="18sp"
                android:text="@string/i_know"/>
    </LinearLayout>
</LinearLayout>