<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@drawable/common_bg">
    <!--头部-->
    <RelativeLayout
            android:id="@+id/head"
            android:layout_alignParentTop="true"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/head_bg">

        <ImageView
                android:id="@+id/back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/back"
                android:layout_alignParentLeft="true"
                android:layout_alignWithParentIfMissing="true"
                android:layout_centerVertical="true"/>

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:text="@string/certification"
                android:layout_centerInParent="true"/>
    </RelativeLayout>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:paddingTop="20dp"
            android:orientation="vertical">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:background="@drawable/input">

            <EditText
                    android:id="@+id/real_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:inputType="text"
                    android:textSize="16sp"
                    android:background="@drawable/input_underline"
                    android:hint="@string/input_real_name_hint"/>

            <EditText
                    android:id="@+id/identity_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:inputType="text"
                    android:maxLength="18"
                    android:textSize="16sp"
                    android:background="@drawable/input_underline"
                    android:hint="@string/input_identity_card_hint"/>
        </LinearLayout>

        <ImageView
                android:id="@+id/id_card_image"
                android:layout_width="420px"
                android:layout_height="250px"
                android:layout_margin="10dp"
                android:layout_gravity="center"
                android:scaleType="fitXY"
                android:src="@drawable/id_card_demo"/>

        <Button
                android:id="@+id/upload"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:textColor="@color/white"
                android:textSize="16sp"
                android:text="@string/click_to_upload"
                android:background="@drawable/blue_button"/>

        <Button
                android:id="@+id/submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/submit"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:background="@drawable/red_long_button"/>
    </LinearLayout>
</LinearLayout>