<?xml version="1.0" encoding="utf-8"?>
<!--区域布局-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/house_visible_area"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical">
	<!--一条水平线-->
	<ImageView
			android:layout_width="match_parent"
			android:layout_height="1px"
			android:background="@color/split_line"/>
	<!--区域、价格、类型、排序-->
	<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_marginTop="10dp"
			android:orientation="horizontal">
		<!--区域-->
		<LinearLayout
				android:id="@+id/house_area_linear_one"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="horizontal"
				android:gravity="center"
				android:layout_gravity="center_vertical">
			<TextView
					android:id="@+id/house_area_one"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:textColor="@color/black"
					android:text="@string/area"/>
			<ImageView
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_marginLeft="2dp"
					android:src="@drawable/new_house_dark"/>

		</LinearLayout>
		<ImageView
				android:layout_width="1px"
				android:layout_height="match_parent"
				android:background="@color/split_line"/>
		<!--价格-->
		<LinearLayout
				android:id="@+id/house_area_linear_two"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="horizontal"
				android:gravity="center"
				android:layout_gravity="center_vertical">
			<TextView
					android:id="@+id/house_area_two"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:textColor="@color/black"
					android:text="@string/price"/>
			<ImageView
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_marginLeft="2dp"
					android:src="@drawable/new_house_dark"/>
		</LinearLayout>

		<ImageView
				android:layout_width="1px"
				android:layout_height="match_parent"
				android:background="@color/split_line"/>
		<!--类型-->
		<LinearLayout
				android:id="@+id/house_area_linear_three"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="horizontal"
				android:gravity="center"
				android:layout_gravity="center_vertical">
			<TextView
					android:id="@+id/house_area_three"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:textColor="@color/black"
					android:text="@string/type"/>
			<ImageView
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_marginLeft="2dp"
					android:src="@drawable/new_house_dark"/>
		</LinearLayout>

		<ImageView
				android:layout_width="1px"
				android:layout_height="match_parent"
				android:background="@color/split_line"/>
		<!--排序-->
		<LinearLayout
				android:id="@+id/house_area_linear_four"
				android:layout_width="0dp"
				android:layout_height="wrap_content"
				android:layout_weight="1"
				android:orientation="horizontal"
				android:gravity="center"
				android:layout_gravity="center_vertical">
			<TextView
					android:id="@+id/house_area_four"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:textColor="@color/black"
					android:text="@string/more"/>
			<ImageView
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:layout_marginLeft="2dp"
					android:src="@drawable/new_house_dark"/>
		</LinearLayout>

	</LinearLayout>

	<ImageView
			android:id="@+id/house_area_bottom_image"
			android:layout_width="match_parent"
			android:layout_height="1px"
			android:layout_marginTop="10dp"
			android:background="@color/split_line"/>

</LinearLayout>